# nvptxglue-example

./: Cargo.toml  build.rs
examples/: run-example.rs
kernels/: Cargo.toml  lib.rs
src/: lib.rs
