[package]
name = "nvptxglue-example"
version = "0.0.0"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

#[workspace]
#members = ["kernels"]

[lib]
name = "nvptxglue_example"
path = "src/lib.rs"

[build-dependencies]
nvptxglue = { path = "../nvptxglue" }

[dependencies]
cuda-ffi-types = { git = "https://github.com/peterhj/cuda-ffi-types" }
cuda = { git = "https://github.com/peterhj/libcuda" }
